...
        trackerObj *tto = [[trackerObj alloc] init];
		self.tempTrackerObj = tto;
		//tempTrackerObj.trackerName = @"";
		//[self.tempTrackerObj init];
		self.tempTrackerObj.toid = [self.tlist getUnique];
		//[self.tempTrackerObj release];  // rtm 05 feb 2012 +1 alloc/init +1 retained self.tempTrackerObj
		self.title = @"Add tracker";
        self.toolbar.hidden = YES;
    } else {
			self.title = @"Modify tracker";
	        self.toolbar.hidden = NO;
    }
	
...
- (CGFloat)tableView:(UITableView *)tableView heightForRowAtIndexPath:(NSIndexPath *)indexPath
{
    NSUInteger row = [indexPath row];
    NSUInteger section = [indexPath section];
    if (0==section) {
        //CGSize tns = [self.tempTrackerObj.trackerName sizeWithAttributes:@{NSFontAttributeName:PrefBodyFont}];
        CGSize tns = [@"Name this Tracker" sizeWithAttributes:@{NSFontAttributeName:PrefBodyFont}];
        return tns.height + (2*MARGIN);
    } else {
        if (row == [self.tempTrackerObj.valObjTable count] ) {
            CGSize vons = [@"add another thing to track" sizeWithAttributes:@{NSFontAttributeName:PrefBodyFont}];
            return vons.height + (2*MARGIN);
        } else {
            valueObj *vo = (valueObj *) (self.tempTrackerObj.valObjTable)[row];
            CGSize vons = [vo.valueName sizeWithAttributes:@{NSFontAttributeName:PrefBodyFont}];
            return vons.height + (2*MARGIN) + 6.0;
        }
...
					 initWithStyle:UITableViewCellStyleSubtitle
					 reuseIdentifier: valCellID];
		}
		NSInteger row = [indexPath row];
		if (row == [self.tempTrackerObj.valObjTable count] ) {
			if (0 == row) {
                cell.detailTextLabel.text = @"Add an item or value to track";
            } else {
                cell.detailTextLabel.text = @"add another thing to track";
            }
			cell.textLabel.text = @"";
		} else {
			valueObj *vo = (self.tempTrackerObj.valObjTable)[row];
...
