...
*/

- (void) alertChkSave {
    NSString *title = [self.tracker.trackerName stringByAppendingString:@" modified"]; // 'modified' needed by handler
    NSString *msg = @"Save this record before leaving?";
    NSString *btn0 = @"Cancel";
    NSString *btn1 = @"Save";
    NSString *btn2 = @"Discard";
    
    UIAlertController* alert = [UIAlertController alertControllerWithTitle:title
                                                                   message:msg
                                                            preferredStyle:UIAlertControllerStyleAlert];
    
...
#pragma mark -
#pragma mark mail support

- (BOOL) attachTrackerData:(MFMailComposeViewController*)mailer key:(NSString*)key {
    BOOL result;
    NSString *fp = [self.tracker getPath:RTRKext];
    NSString *mimetype=@"application/rTracker";
    NSError *err;
    NSString *fname=[self.tracker.trackerName stringByAppendingString:RTRKext];
    
    if ([key isEqualToString:emEmailCsv]) {
        if ((result = [self.tracker writeCSV])) {
            fp = [self.tracker getPath:CSVext];
...
