...
	//[pkr selectRow:[self epToRow:1] inComponent:1 animated:NO];
	
    frame.origin.y += frame.size.height ;//+ MARGIN;
	//frame.origin.x = MARGIN;
	frame.size.height = labframe.size.height;
//
    frame.origin.x = [@"Add" sizeWithAttributes:@{NSFontAttributeName:PrefBodyFont}].width + 3*MARGIN;
    //frame.origin.y += frame.size.height + MARGIN;
    labframe = [self.ctvovcp configLabel:@"Constant value:" 
                                   frame:frame
                                     key:CLKEY 
                                   addsv:NO ];
    
...
